@@ -21,10 +21,6 @@ Table of content
 
 * **[Building with Maven](#building-with-maven)**
 
-* **[Developing with Eclipse](#developing-with-eclipse)**
-
-* **[Developing with IntelliJ](#developing-with-intellij)**
-
 * **[Team communication](#team-communication)**
 
 * **[Writing documentation](#writing-documentation)**
@@ -37,11 +33,11 @@ Quick start
 
 If you don't want to contribute to this project and you know git and maven, these build instructions should suffice:
 
-* To build 1 repository, for example `guvnor`:
+* To build 1 repository, for example `drools`:
 
     ```shell
-    $ git clone git@github.com:kiegroup/guvnor.git
-    $ cd guvnor
+    $ git clone git@github.com:kiegroup/drools.git
+    $ cd drools
     $ mvn clean install -DskipTests
     ```
 * To build all repositories:
@@ -84,7 +80,7 @@ Installing and configuring git
 
     ```shell
     $ git --version
-    git version 1.7.1
+    git version 2.21.2
     ```
 
 * Configure git correctly:
@@ -93,8 +89,8 @@ Installing and configuring git
     $ git config --global user.name "My Full Name"
     $ git config --global user.email myAccount@gmail.com
     $ git config --global -l
-    user.name=Geoffrey De Smet
-    user.email=gds...@gmail.com
+    user.name=<user name and surname >
+    user.email=<user email address>
     ```
 
     * Warning: the field `user.name` is your full name, *not your username*.
@@ -116,14 +112,14 @@ Because you'll probably want to change our code, it's recommended to fork our co
 so it's easier to share your changes with us later.
 For more info on forking, read [GitHub's help on forking](http://help.github.com/fork-a-repo/).
 
-* First fork the repository you want to work on, for example `guvnor`:
+* First fork the repository you want to work on, for example `drools`:
 
     * Surf to [the blessed repositories on github](https://github.com/kiegroup) and log in.
 
         * Note: **Every git repository can be build alone.**
-        You only need to fork/clone the repositories you're interested in (`guvnor` in this case).
+        You only need to fork/clone the repositories you're interested in (`drools` in this case).
 
-    * Surf to [the specific repository (guvnor)](https://github.com/kiegroup/guvnor)
+    * Surf to [the specific repository (drools)](https://github.com/kiegroup/drools)
 
     * Click the top right button *Fork*
 
@@ -138,8 +134,8 @@ For more info on forking, read [GitHub's help on forking](http://help.github.com
     $ cd kiegroup
 
     # Then clone the repository you want to clone.
-    $ git clone git@github.com:MY_GITHUB_USERNAME/guvnor.git
-    $ cd guvnor
+    $ git clone git@github.com:MY_GITHUB_USERNAME/drools.git
+    $ cd drools
     $ ls
     ```
 
@@ -152,13 +148,13 @@ For more info on forking, read [GitHub's help on forking](http://help.github.com
         * Use git checkout to switch to a more stable branch or tag:
 
             ```shell
-            $ git checkout 5.2.0.Final
+            $ git checkout <stable version> # i.e git checkout 7.33.x
             ```
 
 * Add the blessed repository as upstream (if you've directly cloned the blessed repository, don't do this):
 
     ```shell
-    $ git remote add upstream git@github.com:kiegroup/guvnor.git
+    $ git remote add upstream git@github.com:kiegroup/drools.git
     $ git fetch upstream
     ```
 
@@ -283,6 +279,11 @@ A pull request is like a patch file, but easier to apply, more powerful and you'
     * Surf to that topic branch on your fork on github.
 
     * Click the button *Pull Request* on the top of the page.
+        * Once the *Pull Request* is built the user who raised the PR gets an email (email address of user that is stored in github) with the result.
+          If the user has access to the RedHat VPN he can access the links to the logs of the build and to its failed tests. In case the connection to VPN
+          is not available the user gets the failed test in the message body (*UNSTABLE build*) or he gets the log file compressed as attachment (*FAILED build*).
+          In case the build was *SUCCESSFUL* no mail is sent, only if the first build failed and the PR was fixed, so the second PR fixes the build. In these cases
+          the user will get an email. 
 
 * Accepting a pull request
 
@@ -320,7 +321,7 @@ Installing Maven
 
             ```shell
             $ cd ~/opt/build/
-            $ ln -s apache-maven-3.3.9 apache-maven
+            $ ln -s apache-maven-3.5.2 apache-maven
             ```
 
             Next time you only have to remove the link and recreate the link to the new version.
@@ -332,13 +333,9 @@ Installing Maven
             export PATH="$M3_HOME/bin:$PATH"
             ```
 
-    * Give more memory to maven, so it can build the big projects too:
+    * Give more memory to maven:
 
-        * Add this to your `~/.bashrc` file:
-
-            ```shell
-            export MAVEN_OPTS="-Xms256m -Xmx1024m"
-            ```
+        * Please read: [Configuring Apache Maven](http://maven.apache.org/configure.html)
 
 * Windows:
 
@@ -354,7 +351,7 @@ Installing Maven
 
     ```shell
     $ mvn --version
-    Apache Maven 3.3.9 (...)
+    Apache Maven 3.5.2 (...)
     Java version: 1.8.0_112
     ```
 
@@ -363,15 +360,17 @@ Installing Maven
 Running the build
 -----------------
 
-* Go into a project's base directory, for example `guvnor`:
+* Go into a project's base directory, for example `drools`:
 
     ```shell
     $ cd ~/projects/kiegroup
+    $ ls 
+    ```
+    the repositories displayed should be like listed here. [repository_list](https://github.com/kiegroup/droolsjbpm-build-bootstrap/blob/master/script/repository-list.txt)
+    ```shell
+    $ cd drools
     $ ls
-    drools  droolsjbpm-build-bootstrap droolsjbpm-integration  droolsjbpm-knowledge  droolsjbpm-tools  optaplanner  guvnor
-    $ cd guvnor
-    $ ls
-    ...  guvnor-repository  guvnor-webapp-drools  pom.xml
+    ...  drools-core  drools-cdi  pom.xml ...
     ```
 
     Notice you see a `pom.xml` file there. Those `pom.xml` files are the heart of Maven.
@@ -442,16 +441,7 @@ Those SNAPSHOTS were build and deployed last night by Jenkins jobs.
 Running tests
 -------------
 
-Guvnor uses Arquillian to run tests in a J2EE container and hence tests need to be ran differently to others.
-
-* Guvnor
-
-    ```shell
-    $ cd ~/projects/kiegroup/guvnor/guvnor-webapp-drools
-    $ mvn integration-test [-Dtest=ATestClassName]
-    ```
-
-* All other modules
+* All modules
 
     ```shell
     $ cd ~/projects/kiegroup/drools
@@ -646,595 +636,6 @@ After testing the regenerated files, don't forget to commit them.
 
 For Linux/Mac, you have to compile it yourself as there are no binaries available. Follow the instructions in the README file for that.
 
-Developing with Eclipse
-=======================
-
-Before running Eclipse
-----------------------
-
-* Do not use an Eclipse version older than `3.6 (helios)`.
-
-* Avoid an `OutOfMemoryException` and a `StackOverflowError` when building.
-
-    Open `$ECLIPSE_HOME/eclipse.ini` and add/change this: on openFile -vmargs:
-
-    ```shell
-    openFile
-    -vmargs
-    ...
-    -XX:MaxPermSize=512m
-    -Xms512m
-    -Xmx1024m
-    -Xss1024k
-    ```
-
-Configuring the project with the m2eclipse plugin
--------------------------------------------------
-
-The m2eclipse plugin is a plugin in Eclipse for Maven.
-This is the new way (and compatible with tycho).
-
-* Open Eclipse
-
-* Follow [the installation instructions of m2eclipse](http://m2eclipse.sonatype.org/).
-
-    * Follow the link *Installing m2eclipse* at the bottom.
-
-* Click menu *File*, menu item *Import*, tree item *Maven*, tree item *Existing Maven Projects*.
-
-* Click button *Browse*, select a repository directory. For example `~/projects/kiegroup/guvnor`.
-
-* Unfold *Advanced*, textfield *Profiles*: `notSoaProfile,fullProfile`.
-
-For more information, see [the m2eclipse book](http://www.sonatype.com/books/m2eclipse-book/reference/)
-
-Configuring the project with the deprecated maven-eclipse-plugin
-----------------------------------------------------------------
-
-The maven-eclipse-plugin plugin is a plugin in Maven for Eclipse.
-This is the old way (of which the development has stopped).
-
-Run this command to generate `.project` and `.classpath` files:
-
-```shell
-$ mvn eclipse:eclipse
-```
-
-* Open Eclipse
-
-* Menu item *Import existing projects*, navigate to the project base directory, select all the projects (= modules) it lists.
-
-Important note: `mvn eclipse:eclipse` does not work for our eclipse plugins because it is not compatible with tycho
-(and never will be).
-
-Configuring Eclipse
--------------------
-
-* Force language level 8, to fail-fast when (accidentally) using features available only in newer Java versions.
-
-    * Open menu *Window*, menu item *Preferences*
-
-    * Click tree item *Java*, tree item *Compiler*, section *JDK Compliance*, combobox *Compiler compliance level* should be `1.8`.
-
-* Remove the test resources Java Build Path exclusion filter to ensure JUnit tests ran inside Eclipse can find the necessary resources.
-
-    * Right-click the project
-
-    * Select menu item *Build Path*, sub-menu item *Configure build path...*
-
-    * On the *Sources* tab, scroll down to `<project>\src\test\resources` and expand tree
-
-    * Select `Excluded` and click *Remove*. The filter should show as `(none)`
-
-* Set the correct file encoding (UTF-8 except for properties files) and end-of-line characters (unix):
-
-    * Open menu *Window*, menu item *Preferences*.
-
-    * Click tree item *General*, tree item *Workspace*
-
-        * Label *Text file encoding*, radiobutton *Other*, combobox `UTF-8`.
-
-        * Label *New text file delimiter*, radiobutton *Other*, combobox `Unix`.
-
-    * Click tree item *XML*, tree item *XML Files*.
-
-        * Combobox *Encoding*: `ISO 10646/Unicode(UTF-8)`.
-
-    * Click tree item *CSS*, tree item *CSS Files*.
-
-        * Combobox *Encoding*: `ISO 10646/Unicode(UTF-8)`.
-
-    * Open tree item *HTML*, tree item *HTML Files*.
-
-        * Combobox *Encoding*: `ISO 10646/Unicode(UTF-8)`.
-
-    * Note: normal i18n properties files must be in `ISO-8859-1` as specified by the java `ResourceBundle` contract.
-
-        * Note on note: GWT i18n properties files override that and must be in `UTF-8` as specified by the GWT contract.
-
-* Recommended: import our code style
-
-    * Set up formatter for edited code only: Open menu *Window*, menu item *Preferences*, click tree item *Java*, tree item *Editor*, and click *Save actions*. Enable *Perform the selected actions on save*: select *Format source code* (*Format edited lines*) and *Organize imports*
-    
-    * **IMPORTANT** Eclipse uses three separate formatters, and you need to setup each one separately (click Import...,
-    select the file, and click apply for each one):
-    
-        - Clean Up: Uses "eclipse-code-style-clean-up_droolsjbpm-java-conventions.xml"
-        
-        - Formatter: Uses "eclipse-code-style-formatter_droolsjbpm-java-conventions.xml"
-        
-        - Organize Imports: Uses "eclipse-code-style-organize-imports_droolsjbpm-java-conventions.importorder"
-
-    * If you don't do this, you need to set the number of spaces correctly manually.
-
-    * Use the one from `droolsjbpm-build-bootstrap/ide-configuration`
-
-* Set the correct number of spaces when pressing tab:
-
-    * Warning: If you imported the `eclipse-formatter.xml` file, you don't need to set it for Java, but you do need to set it for XML anyway!
-
-    * Open menu *Window*, menu item *Preferences*.
-
-        * If you have project specific settings enabled instead, right click on the project and click the menu item *Properties*.
-
-    * Click tree item *Java*, tree item *Code Style*, tree item *Formatter*.
-
-        * Click button *Edit* of the active profile, tab *Indentation*
-
-        * Combobox *Tab policy*: `spaces only`
-
-        * Textfield *Indentation size*: `4`
-
-        * Textfield *Tab size*: `4`
-
-        * Note: If it is a built-in profile, you 'll need to change its name with the textfield on top.
-
-    * Click tree item *XML*, tree item *XML Files*, tree item *Editor*.
-
-        * Radiobutton *Indent using space*: `on`
-
-        * Textfield *Indentation size*: `2`
-
-    * Click tree item *General*, tree item *Editors*, tree item *Text Editors*.
-
-        * Checkbox *Insert spaces for tabs*: `on`
-
-        * Textfield *Displayed tab width*: `4`
-
-    * Click tree item *CSS Files*, tree item *Editor*.
-
-        * Radiobutton *Indent using space*: `on`
-
-        * Textfield *Indentation size*: `4`
-
-* Set the correct file headers (do not include @author or a meaningless javadoc):
-
-    * Open menu *Window*, menu item *Preferences*.
-
-    * Click tree item *Java*, tree item *Code Style*, tree item *Code Templates*.
-
-    * Click tree *Configure generated code and comments*, tree item *Comments*, tree item *types*.
-
-    * Remove the line *@author Your Name*.
-
-        * We do not accept `@author` lines in source files, see FAQ below.
-
-    * Remove the entire javadoc as automatically templated data is meaningless.
-
-* Set the correct license header
-
-    Eclipse JEE Helios currently has no built-in support of license headers, but you can configure it for new files.
-
-    * Open menu *Window*, menu item *Preferences*.
-
-        * If you have project specific settings enabled instead, right click on the project and click the menu item *Properties*.
-
-    * Click tree item *Java*, tree item *Code Style*, tree item *Copy templates*.
-
-    * Click tree item *Comments*, tree item *Files*.
-
-    * Replace the text area with the following content:
-
-        ```
-        /*
-         * Copyright ${year} Red Hat, Inc. and/or its affiliates.
-         *
-         * Licensed under the Apache License, Version 2.0 (the "License");
-         * you may not use this file except in compliance with the License.
-         * You may obtain a copy of the License at
-         *
-         *     http://www.apache.org/licenses/LICENSE-2.0
-         *
-         * Unless required by applicable law or agreed to in writing, software
-         * distributed under the License is distributed on an "AS IS" BASIS,
-         * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-         * See the License for the specific language governing permissions and
-         * limitations under the License.
-         */
-         ```
-
-    * Note: Do not start or end with a newline character
-
-    * Note: Do not start with `/**`: it is not a valid javadoc.
-   
-
-Extra Eclipse plugins
----------------------
-
-* Enable git support
-
-    * Open menu *Help*, menu item *Install new software*.
-
-    * Click combobox *Update site* `Helios`, tree item *Collaboration*, tree item *Eclipse EGit*.
-
-* GWT plugin
-
-    * [Download and install the Eclipse GWT plugin](http://gwt-plugins.github.io/documentation/gwt-eclipse-plugin/Download.html)
-
-        * Note: it is recommended to use the same [GWT SDK version](https://developers.google.com/eclipse/docs/using_sdks#selecting-sdks-for-a-project) like the GWT version it is used in [droolsjbpm-build-bootstrap/pom.xml](pom.xml) `version.com.google.gwt` property value.
-
-    * In *Package Explorer*, right click on the project `guvnor-webapp`, menu item *Properties*.
-
-        * Enable the GWT aspect:
-
-            * Click tree item *Google*, tree item *Web Toolkit Settings...*
-
-            * Checkbox *Use google Web Tookit*: `on`
-
-            * List *Entry Point Modules* should contain `Guvnor - org.drools.guvnor` (and optionally `FastCompiledGuvnor` too).
-
-        * The gwt-dev jar needs to be first on the compilation classpath (the `java.lang.NoSuchFieldError: warningThreshold` problem)
-
-            * Click tree item *Java Build Path*
-
-            * Tab *Libraries*, button *Add Library...*, list item *Google Web Toolkit*, button *Next*, button *Finish*
-
-            * Tab *Order and Export*, select `GWT SDK ...`, button *Top*
-
-    * Verify that you have a web browser configured in Eclipse:
-
-        * Open menu *Window*, menu item *Preferences*.
-
-        * Click tree *General*, tree item *Web Browser*, radiobutton *Use external web browser*.
-
-        * Click button *New...*, textfield *Name* `firefox`, textfield *Location* `/usr/bin/firefox`, textfield *Parameters* `%URL%`, button *OK*.
-
-        * Check the checkbox next to `firefox`.
-
-    * Run GWT in hosted mode
-
-        * Open project context menu *Properties*, Google->Web application->
-
-            * This project has a WAR directory, tick
-
-            * WAR directory, `target/guvnor-webapp-drools-5.4.0-SNAPSHOT` (this will differ for different releases)
-
-            * You will need to have completed a maven install, as explained above to generate the `target/guvnor-webapp-drools-5.4.0-SNAPSHOT` directory
-
-            * Launch and deploy from this directory, tick
-
-        * Open menu *Run*, menu item *Run configurations...*
-
-        * In the list, select *Web Application*, button *new launch configuration*
-
-        * Tab *Main*, Project: `guvnor-webapp-drools`
-
-        * Tab *Main*, Ensure `Main class` is: `com.google.gwt.dev.DevMode`
-
-        * Tab *GWT*, list *Available Modules*: `Guvnor - org.drools.guvnor`
-
-        * Tab *Arguments*, Ensure `Program Arguments` are :
-
-            ```
-            -war <path-to-war-folder> -remoteUI "${gwt_remote_ui_server_port}:${unique_id}" -startupUrl index.jsp -logLevel INFO -codeServerPort 9997 -port 8888 org.drools.guvnor.FastCompiledGuvnor org.drools.guvnor.Guvnor
-            ```
-
-            For example:
-
-            ```
-            -war /home/manstis/workspaces/git/kiegroup/guvnor/guvnor-webapp-drools/target/guvnor-webapp-drools-5.4.0-SNAPSHOT -remoteUI "${gwt_remote_ui_server_port}:${unique_id}" -startupUrl index.jsp -logLevel INFO -codeServerPort 9997 -port 8888 org.drools.guvnor.FastCompiledGuvnor org.drools.guvnor.Guvnor
-            ```
-
-        * Tab *Arguments*, it is recommended to set `VM Arguments` to: `-XX:MaxPermSize=512m -Xms512m -Xmx2048m`. You might be able to try smaller values, but these are known to work.
-
-        * Button *Run*.
-
-    * In your workspace, in the tab *Development Mode*, double click on the `Guvnor` URL.
-
-    * If you encounter a java.lang.NoSuchFieldError: warningThreshold error you need to follow the steps [here](http://code.google.com/p/google-web-toolkit/issues/detail?id=4479), i.e.
-
-        * Add GWT-SDK to your classpath (even though it is a Maven dependency)
-
-        * On your Java Build Path, Order and Export tab, move GWT-SDK to the top
-
-Eclipse plugin development
---------------------------
-
-* Installing a kiegroup eclipse plugin into a fresh Eclipse from a local update site.
-
-    * Follow the intructions in [the description entity in the org.drools.updatesite pom.xml file](https://github.com/kiegroup/droolsjbpm-tools/blob/master/drools-eclipse/org.drools.updatesite/pom.xml).
-
-Developing with IntelliJ
-========================
-
-Before running IntelliJ
------------------------
-
-* Avoid an `OutOfMemoryException` while editing or building.
-
-    Open `$IDEA_HOME/bin/idea.vmoptions` and change the first 3 values to this:
-
-    ```shell
-    -Xms512m
-    -Xmx1024m
-    -XX:MaxPermSize=512m
-    ```
-
-Configuring the project with the maven integration
---------------------------------------------------
-
-IntelliJ has very good built-in support for Maven.
-
-* Open IntelliJ.
-
-* Click menu *File*, menu item *New project*.
-
-    * Click radiobutton *Create project from scratch*, button *Next*
-
-    * Textfield *name*: `kiegroup`
-
-    * Textfield *Project files location*: `~/projects/kiegroup`
-
-    * Checkbox *Create module*: `off`
-
-Note: If you want to configure a main project that includes all projects you must create an empty project and add the
-projects as modules.
-
-* Click menu *File*, menu item *New module*
-
-    * Radiobutton *Import from external model*, button *Next*, button *Next*
-
-    * Textfield *Root directory*: `~/projects/kiegroup/guvnor`
-
-        * That is the directory that contains the multiproject `pom.xml` file from a project base directory.
-
-    * Button *Next*, check in the *Selected profiles* `notSoaProfile` and `fullProfile`, button *Next*, button *Finish*.
-
-    * Go grab a coffee while it's indexing.
-
-    * Repeat if you want to work on more than 1 kiegroup project.
-
-Note: Don't use the `maven-idea-plugin` on the command line with `mvn`: it's dead.
-
-Configuring IntelliJ
---------------------
-
-* Force language level 8, to fail-fast when (accidentally) using features available only in newer Java versions.
-
-    * Open menu *File*, menu item *Project Structure*
-
-    * Click list item *Modules*, for each module, tab *Sources*, combobox *Language level* should be automatically set to `8.0 ...`
-
-* Avoid that changes in some resources are ignored in the next run/debug (and you are forced to use mvn)
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *Compiler*, textfield *Resource patterns*: change to `!?*.java` (remove other content)
-
-* Avoid a `StackOverflowError` when building
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *Compiler*, tree item *Java Compiler*, textfield *Additional command line parameters*
-
-    * Add `-J-Xss1024k` so it becomes something like `-target 1.8 -J-Xss1024k`
-
-* Include files with non-default extensions in your searches and refactors
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *File Types*, in the list *Recognized File Types*:
-
-        * Next to list *Recognized File Types*, click on the button *Add...*
-
-            * Textfield *name*: `DRL files`
-
-            * Textfield *Line comment*: `//`
-
-            * Textfield *Block comment start*: `/*`
-
-            * Textfield *Block comment end*: `*/`
-
-            * Check the checkboxes *Support paired braces*, *Support paired brackets* and *Support parens*
-
-            * Add some *keywords*: `rule`, `when`, `then`, `end`, ...
-
-            * Click button *ok*
-
-        * Next to the list *Registered Patterns*, use the button *Add...*:
-
-            * For `DRL files`, add `*.drl`, `*.mvel`, `*.drt`, `*.dslr`
-
-            * For `Text files`, add `*.md`
-
-            * For `Properties files`, add `*.dsl`
-
-            * For `XML Files`, add `*.rf`
-
-* Recommended: import our code style
-
-    * If you don't do this, you need to set the file encoding and number of spaces correctly manually.
-
-    * Use the one from `droolsjbpm-build-bootstrap/ide-configuration`
-
-    * Copy to `~/.IntelliJIdea*/config/codestyles/` (on mac: `~/Library/Preferences/IntelliJIdea*/config/codestyles/`)
-
-    * Restart, open menu *File*, menu item *Settings*
-
-    * Click tree item *Code Style* and select it.
-
-        * Note: IntelliJ IDEA doesn't format your code automatically. You have to press Ctrl+Alt+L keyboard combination to trigger auto formatting when coding is done. Another option is to commit your code directly from IntelliJ IDEA (open menu *VCS*, menu item *Commit Changes...*), and select the option *Reformat Code*, which will reformat all files changed in the commit.
-
-* Set the correct file encoding (UTF-8 except for properties files) and end-of-line characters (unix):
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *Code Style*, tree item *General*
-
-        * Combobox *Line separator (for new files)*: `Unix`
-
-    * Click tree item *File Encodings*
-
-        * Combobox *IDE Encoding*: `UTF-8`
-
-        * Combobox *Default encoding for properties files*: `ISO-8859-1`
-
-            * Note: normal i18n properties files must be in `ISO-8859-1` as specified by the java `ResourceBundle` contract.
-
-                * Note on note: GWT i18n properties files override that and must be in `UTF-8` as specified by the GWT contract.
-
-* Set the correct number of spaces when pressing tab:
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *Code Style*, tree item *General*
-
-    * Click tab *Java*
-
-        * Checkbox *Use tab character*: `off`
-
-        * Textfield *Tab size*: `4`
-
-        * Textfield *Indent*: `4`
-
-        * Textfield *Continuation indent*: `8`
-
-    * Open tab *XML*
-
-        * Checkbox *Use tab character*: `off`
-
-        * Textfield *Tab size*: `2`
-
-        * Textfield *Indent*: `2`
-
-        * Textfield *Continuation indent*: `4`
-
-* Set the correct file headers (do not include @author or a meaningless javadoc):
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *File templates*, tab *Includes*, list item `File Header`
-
-    * Remove the line *@author Your Name*.
-
-        * We do not accept `@author` lines in source files, see FAQ below.
-
-    * Remove the entire javadoc as automatically templated data is meaningless.
-
-* Set the correct license header
-
-    * Open menu *File*, menu item *Settings*
-
-    * Click tree item *Copyright*, tree item *Copyright profiles*
-
-        * Click button *+* to add a *Copyright profile*
-
-        * Textfield *name*: `Red Hat, Inc. and/or its affiliates`
-
-        * Textarea with content:
-
-            ```
-            Copyright $today.year Red Hat, Inc. and/or its affiliates.
-
-            Licensed under the Apache License, Version 2.0 (the "License");
-            you may not use this file except in compliance with the License.
-            You may obtain a copy of the License at
-
-                http://www.apache.org/licenses/LICENSE-2.0
-
-            Unless required by applicable law or agreed to in writing, software
-            distributed under the License is distributed on an "AS IS" BASIS,
-            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-            See the License for the specific language governing permissions and
-            limitations under the License.
-            ```
-
-        * Note: Do not start or end with a newline character
-
-        * Note: Do not start with `/**`: it is not a valid javadoc.
-
-    * Click tree item *Copyright*
-
-        * Combobox *Default project copyright*: `Red Hat, Inc. and/or its affiliates`
-
-Extra IntelliJ plugins
-----------------------
-
-* Enable git support
-
-    * Open menu *File*, menu item *Other Settings*, menu item *Configure plugins*.
-
-    * Check *Git*.
-
-* GWT plugin (to run in GWT hosted mode)
-
-    * Open menu *File*, menu item *Project structure*
-
-        * For the module `guvnor-webapp-drools`, add the new aspect *GWT* if you haven't already.
-
-            * Textfield *Compiler maximum heap size (Mb)*: `512`
-
-    * Open menu *Run*, menu item *Edit configurations*
-
-        * Add new *GWT configuration*
-
-            * Combobox *Module*: `guvnor-webapp-drools`
-
-            * Combobox *GWT Module to load*: `org.drools.guvnor.FastCompiledGuvnor`
-
-            * Textfield *VM options*: `-Xmx1024m -XX:MaxPermSize=256m`
-
-            * Textfield *Start page*: `org.drools.guvnor.Guvnor/Guvnor.html` (Second entry, not the first)
-
-        * Run that configuration.
-
-* Tomcat exploded war deployment
-
-    * Open menu *File*, menu item *Project structure*
-
-        * Select tree item *Artifacts*, list item `guvnor-webapp-drools:war exploded`
-
-            * Checkbox *Build on make*: `on`
-
-    * Open menu *Run*, menu item *Edit configurations*
-
-        * Add new *Tomcat server*, *local*
-
-            * Tab *deployment*, add *Artifact* `guvnor-webapp-drools:war exploded`.
-
-            * Panel *Before launch*, checkbox *Build 'guvnor-webapp-drools:war exploded' artifact*: `on`
-
-        * Run that configuration.
-
-Linux inotify
--------------
-
-We have encountered some issues with different Linux distribution's *inotify* when running any of the Workbench's in Super Dev Mode from within IntelliJ.
-
-Error message `User limit of inotify instances reached or too many open files` has been observed with both Ubuntu and Fedora. Should you encounter this issue you will need to reconfigure your *inotify* settings.
-
-Add the following to `/etc/sysctl.conf` and then run `sudo sysctl -p`:
-
-`fs.inotify.max_user_watches = 524288`
-
-`fs.inotify.max_user_instances = 524288`
-
-You may also need to add the following lines (replacing `user-id` with your User Id) to `/etc/security/limits.conf`:
-
-`user-id soft nofile 4096`
-
-`user-id hard nofile 10240`
-
 
 Team communication
 ==================
@@ -1246,9 +647,8 @@ Team workflows
 
 * Fixing a community issue in JIRA:
 
-    * Find/create the issue in JIRA ([Drools](https://issues.jboss.org/browse/DROOLS),
-    [OptaPlanner](https://issues.jboss.org/browse/PLANNER), [jBPM](https://issues.jboss.org/browse/JBPM),
-    [Guvnor](https://issues.jboss.org/browse/GUVNOR))
+    * Find/create the issue in JIRA ([Drools](https://issues.redhat.com/projects/DROOLS/issues/),
+    [OptaPlanner](https://issues.redhat.com/projects/PLANNER/issues), [jBPM](https://issues.redhat.com/projects/JBPM/issues)
 
     * Fix the issue and push those changes to the appropriate branch(es) on github.
 
@@ -1259,19 +659,6 @@ Team workflows
 
         * Once the reporter verifies the fix, he changes *Status* to `Closed`. Or we bulk change it to `Closed` after a year.
 
-* (Red Hat developers only) Fixing BRMS issues in Bugzilla:
-
-    * Find an issue in Bugzilla. Change *Status* to `ASSIGNED` and *Assigned To* to yourself.
-
-    * Fix the issue and push those changes to the appropriate branch(es) on github.
-
-        * This will likely require back porting or forward porting, because the issue must be fixed on master too.
-
-    * Change the *Status* to `MODIFIED`.
-
-        * Once the new product version is build, they change *Status* to `ON_QA`.
-
-        * Once QA verifies the fix, they change *Status* to `VERIFIED`.
 
 Knowing what's going on
 -----------------------
@@ -1302,51 +689,15 @@ Knowing what's going on
 
         * [JBPM](https://issues.jboss.org/plugins/servlet/streams?key=JBPM&os_authType=basic)
 
-        * [GUVNOR](https://issues.jboss.org/plugins/servlet/streams?key=GUVNOR&os_authType=basic)
-
     * Subscribe to github repository commits:
 
         * [droolsjbpm-build-bootstrap](https://github.com/kiegroup/droolsjbpm-build-bootstrap/commits/master.atom)
 
-        * [droolsjbpm-knowledge](https://github.com/kiegroup/droolsjbpm-knowledge/commits/master.atom)
+            * Example how to build a right URL: `https://github.com/kiegroup/<repository>/commits/master.atom`
 
-        * [drools](https://github.com/kiegroup/drools/commits/master.atom)
+            * where you will find `<repository>` used in kiegroup here: [repositories](https://github.com/kiegroup/droolsjbpm-build-bootstrap/blob/master/script/repository-list.txt)
 
-        * [optaplanner](https://github.com/kiegroup/optaplanner/commits/master.atom)
-
-        * [jbpm](https://github.com/kiegroup/jbpm/commits/master.atom)
-
-        * [droolsjbpm-integration](https://github.com/kiegroup/droolsjbpm-integration/commits/master.atom)
-
-        * [guvnor](https://github.com/kiegroup/guvnor/commits/master.atom)
-
-        * [droolsjbpm-tools](https://github.com/kiegroup/droolsjbpm-tools/commits/master.atom)
-
-        * [droolsjbpm-build-bootstrap](https://github.com/kiegroup/droolsjbpm-build-bootstrap/commits/master.atom)
-
-    * Subscribe to [Jenkins](https://hudson.jboss.org/hudson/view/Drools%20jBPM/)
-
-        * with [the Firefox plugin](https://addons.mozilla.org/en-us/firefox/addon/jenkins-build-monitor/) to easily see in your status bar which builds are failing (recommended):
-
-            * After installation, right click on the Jenkins icon in the lower right corner.
-
-            * Click menu item *Preferences*, tab *Feed*, textfield *poll interval* `30` *minutes*.
-
-            * Click menu item *Preferences*, tab *Display*, combox *Display* `latest build` *on status bar*.
-
-            * Go to the Jenkins job of the projects you're working on:
-
-                * [guvnor](https://hudson.jboss.org/hudson/view/Drools%20jBPM/job/guvnor/)
-
-            * Right click in the lower left corner on the *All* feed link, menu item *Add link to Jenkins build monitor*.
-
-        * Otherwise, check [the Jenkins website](https://hudson.jboss.org/hudson/view/Drools%20jBPM/) often.
-
-            * Note: the public Jenkins is a mirror of the VPN internal Red Hat Jenkins and is sometimes stale.
-
-                * If you think this can be the case, check the build times.
-
-* Join us on IRC: chat.freenode.net #drools #jbpm #guvnor #optaplanner
+* Join us on Zulip: [Chat](https://kie.zulipchat.com/)
 
 Writing documentation
 =====================
